--- a/index.html
+++ b/index.html
@@ -316,12 +316,19 @@
 
   // ========== АВТОРИЗАЦИЯ ==========
   async function login() {
-    const email = document.getElementById('login-email').value;
-    const password = document.getElementById('login-password').value;
-    const { data, error } = await supabase.auth.signInWithPassword({ email, password });
-    if (error) {
-      alert('❌ Ошибка: ' + error.message);
-    } else {
+  const email = document.getElementById('login-email').value;
+  const password = document.getElementById('login-password').value;
+  const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+  if (error) {
+    alert('❌ Ошибка: ' + error.message);
+  } else {
+    currentUser = data.user;
+    document.getElementById('auth-dialog').style.display = 'none';
+    document.getElementById('user-status').textContent = `👤 ${currentUser.email}`;
+    document.getElementById('logout-btn').style.display = 'inline-block';
+    renderArchive();
+  }
+ {
       currentUser = data.user;
       document.getElementById('auth-dialog').style.display = 'none';
       document.getElementById('user-status').textContent = `👤 ${currentUser.email}`;
