--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
     <div id="archive-list"></div>
   </div>
 </div>
+
 <script>
   // ========== SUPABASE ==========
   const supabaseUrl = 'https://xvvhranmftqqddbplypu.supabase.co';
@@ -349,4 +350,374 @@
       document.getElementById('phone').value = data.phone;
       document.getElementById('car-brand').value = data.car_brand;
       document.getElementById('car-model').value = data.car_model;
-      document.getElementById
+      document.getElementById('vin').value = data.vin || '';
+    }
+  }
+
+  // ========== ШАБЛОНЫ ==========
+  async function suggestTemplate(complaint) {
+    if (!complaint.trim()) return;
+    const { data } = await supabase.from('templates').select('*');
+    let matched = null;
+    for (const t of data || []) {
+      if (t.keywords.some(kw => complaint.toLowerCase().includes(kw.toLowerCase()))) {
+        matched = t;
+        break;
+      }
+    }
+    const el = document.getElementById('template-suggestion');
+    if (matched) {
+      currentTemplate = matched;
+      document.getElementById('template-title').textContent = matched.title;
+      el.style.display = 'block';
+    } else {
+      el.style.display = 'none';
+      currentTemplate = null;
+    }
+  }
+
+  function applyTemplate() {
+    if (!currentTemplate) return;
+    document.getElementById('works-body').innerHTML = '';
+    document.getElementById('parts-body').innerHTML = '';
+    workIndex = 1; partIndex = 1;
+
+    if (currentTemplate.works) {
+      try {
+        const works = JSON.parse(currentTemplate.works);
+        works.forEach(w => {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td><input type="text" value="${w.name || ''}"></td>
+            <td><input type="text" value="${w.side || ''}"></td>
+            <td><input type="number" value="${w.qty || 1}" min="1" oninput="calculateSums()"></td>
+            <td><input type="number" value="${w.hours || 0}" step="0.1" oninput="calculateSums()"></td>
+            <td><input type="number" value="${w.price || 0}" oninput="calculateSums()"></td>
+            <td class="sum-cell">0.00</td>
+            <td><button class="btn-sm btn-danger" onclick="deleteRow(this)">🗑️</button></td>`;
+          document.getElementById('works-body').appendChild(row);
+          workIndex++;
+        });
+      } catch (e) { console.error(e); }
+    }
+
+    if (currentTemplate.parts) {
+      try {
+        const parts = JSON.parse(currentTemplate.parts);
+        parts.forEach(p => {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td><input type="text" value="${p.article || ''}"></td>
+            <td><input type="text" value="${p.name || ''}"></td>
+            <td><input type="text" value="${p.side || ''}"></td>
+            <td><input type="number" value="${p.qty || 1}" min="1" oninput="calculateSums()"></td>
+            <td><input type="number" value="${p.price || 0}" oninput="calculateSums()"></td>
+            <td class="sum-cell">0.00</td>
+            <td><button class="btn-sm btn-danger" onclick="deleteRow(this)">🗑️</button></td>`;
+          document.getElementById('parts-body').appendChild(row);
+          partIndex++;
+        });
+      } catch (e) { console.error(e); }
+    }
+    calculateSums();
+    document.getElementById('template-suggestion').style.display = 'none';
+  }
+
+  // ========== ТАБЛИЦЫ ==========
+  function addWorkRow() {
+    const tbody = document.getElementById('works-body');
+    const row = document.createElement('tr');
+    row.innerHTML = `
+      <td><input type="text" placeholder="Работа"></td>
+      <td><input type="text" placeholder="Сторона"></td>
+      <td><input type="number" value="1" min="1" oninput="calculateSums()"></td>
+      <td><input type="number" value="0" step="0.1" oninput="calculateSums()"></td>
+      <td><input type="number" value="0" oninput="calculateSums()"></td>
+      <td class="sum-cell">0.00</td>
+      <td><button class="btn-sm btn-danger" onclick="deleteRow(this)">🗑️</button></td>`;
+    tbody.appendChild(row); workIndex++;
+  }
+
+  function addPartRow() {
+    const tbody = document.getElementById('parts-body');
+    const row = document.createElement('tr');
+    row.innerHTML = `
+      <td><input type="text" placeholder="Артикль"></td>
+      <td><input type="text" placeholder="Наименование"></td>
+      <td><input type="text" placeholder="Сторона"></td>
+      <td><input type="number" value="1" min="1" oninput="calculateSums()"></td>
+      <td><input type="number" value="0" oninput="calculateSums()"></td>
+      <td class="sum-cell">0.00</td>
+      <td><button class="btn-sm btn-danger" onclick="deleteRow(this)">🗑️</button></td>`;
+    tbody.appendChild(row); partIndex++;
+  }
+
+  function deleteRow(btn) { btn.closest('tr').remove(); calculateSums(); }
+
+  function calculateSums() {
+    let total = 0;
+    Array.from(document.querySelectorAll('#works-body tr')).forEach(row => {
+      const qty = parseFloat(row.querySelectorAll('input')[2]?.value) || 0;
+      const price = parseFloat(row.querySelectorAll('input')[4]?.value) || 0;
+      const sum = qty * price;
+      row.querySelector('.sum-cell').textContent = sum.toFixed(2);
+      total += sum;
+    });
+    Array.from(document.querySelectorAll('#parts-body tr')).forEach(row => {
+      const qty = parseFloat(row.querySelectorAll('input')[3]?.value) || 0;
+      const price = parseFloat(row.querySelectorAll('input')[4]?.value) || 0;
+      const sum = qty * price;
+      row.querySelector('.sum-cell').textContent = sum.toFixed(2);
+      total += sum;
+    });
+    document.getElementById('total-sum').textContent = total.toFixed(2);
+  }
+
+  // ========== НАВИГАЦИЯ ==========
+  function switchTab(tab) {
+    document.querySelectorAll('.tab-content').forEach(e => e.classList.remove('active'));
+    document.querySelectorAll('.tab-btn').forEach(e => e.classList.remove('active'));
+    document.getElementById(`${tab}-tab`).classList.add('active');
+    document.querySelector(`.tab-btn:nth-child(${tab === 'form' ? 1 : 2})`).classList.add('active');
+    if (tab === 'archive') renderArchive();
+  }
+
+  // ========== АРХИВ ==========
+  async function renderArchive() {
+    if (!currentUser) return;
+    const { data } = await supabase
+      .from('claims')
+      .select('*')
+      .eq('master_id', currentUser.id)
+      .order('created_at', { ascending: false });
+
+    const el = document.getElementById('archive-list');
+    el.innerHTML = (data?.length ? data.map(c => `
+      <div style="padding:12px;border:1px solid #ddd;margin:8px 0;border-radius:6px;background:#fafafa;">
+        <strong>№${c.number}</strong> — ${c.client_fio} (${c.car_number})<br>
+        Статус: ${c.status === 'agreed' ? 'Согласовано' : 'Черновик'}<br>
+        <button class="btn-sm" onclick="loadClaim('${c.id}')">Открыть</button>
+      </div>`).join('') : '<p>Заявок пока нет.</p>');
+  }
+
+  async function loadClaim(id) {
+    const { data } = await supabase.from('claims').select('*').eq('id', id).single();
+    if (!data) return;
+
+    document.getElementById('claim-id').value = data.id;
+    document.getElementById('claim-number').value = data.number;
+    document.getElementById('car-number').value = data.car_number;
+    document.getElementById('client-fio').value = data.client_fio;
+    document.getElementById('client-company').value = data.client_company || '';
+    document.getElementById('phone').value = data.phone;
+    document.getElementById('car-brand').value = data.car_brand;
+    document.getElementById('car-model').value = data.car_model;
+    document.getElementById('vin').value = data.vin || '';
+    document.getElementById('complaint').value = data.complaint;
+
+    document.getElementById('works-body').innerHTML = '';
+    document.getElementById('parts-body').innerHTML = '';
+    workIndex = 1; partIndex = 1;
+
+    const {  works } = await supabase.from('works').select('*').eq('claim_id', id);
+    works?.forEach(w => {
+      const row = document.createElement('tr');
+      row.innerHTML = `
+        <td><input type="text" value="${w.name}"></td>
+        <td><input type="text" value="${w.side || ''}"></td>
+        <td><input type="number" value="${w.qty}" min="1" oninput="calculateSums()"></td>
+        <td><input type="number" value="${w.hours || 0}" step="0.1" oninput="calculateSums()"></td>
+        <td><input type="number" value="${w.price}" oninput="calculateSums()"></td>
+        <td class="sum-cell">${w.sum?.toFixed(2) || '0.00'}</td>
+        <td><button class="btn-sm btn-danger" onclick="deleteRow(this)">🗑️</button></td>`;
+      document.getElementById('works-body').appendChild(row);
+      workIndex++;
+    });
+
+    const {  parts } = await supabase.from('parts').select('*').eq('claim_id', id);
+    parts?.forEach(p => {
+      const row = document.createElement('tr');
+      row.innerHTML = `
+        <td><input type="text" value="${p.article || ''}"></td>
+        <td><input type="text" value="${p.name}"></td>
+        <td><input type="text" value="${p.side || ''}"></td>
+        <td><input type="number" value="${p.qty}" min="1" oninput="calculateSums()"></td>
+        <td><input type="number" value="${p.price}" oninput="calculateSums()"></td>
+        <td class="sum-cell">${p.sum?.toFixed(2) || '0.00'}</td>
+        <td><button class="btn-sm btn-danger" onclick="deleteRow(this)">🗑️</button></td>`;
+      document.getElementById('parts-body').appendChild(row);
+      partIndex++;
+    });
+
+    calculateSums();
+    switchTab('form');
+  }
+
+  // ========== СОХРАНЕНИЕ ==========
+  async function saveAsDraft() {
+    if (!validateForm()) return;
+    const data = collectClaimData('draft');
+    const id = document.getElementById('claim-id').value;
+    const { error } = id
+      ? await supabase.from('claims').update(data).eq('id', id)
+      : await supabase.from('claims').insert(data);
+    if (error) {
+      alert('❌ Ошибка сохранения: ' + error.message);
+    } else {
+      alert('✅ Черновик сохранён!');
+      resetForm();
+    }
+  }
+
+  async function agreeClaim() {
+    if (!validateForm()) return;
+    const data = collectClaimData('agreed');
+    const id = document.getElementById('claim-id').value;
+    let claimId;
+    if (id) {
+      const { error } = await supabase.from('claims').update(data).eq('id', id);
+      if (error) { alert('❌ Ошибка: ' + error.message); return; }
+      claimId = id;
+    } else {
+      const {  newClaim, error } = await supabase.from('claims').insert(data).select('id').single();
+      if (error) { alert('❌ Ошибка: ' + error.message); return; }
+      claimId = newClaim.id;
+    }
+    await saveWorksParts(claimId);
+    generateCSV(claimId);
+    alert('✅ Заявка согласована! CSV скачан.');
+    resetForm();
+  }
+
+  function collectClaimData(status) {
+    return {
+      number: document.getElementById('claim-number').value,
+      status,
+      client_fio: document.getElementById('client-fio').value,
+      client_company: document.getElementById('client-company').value || null,
+      phone: document.getElementById('phone').value,
+      car_number: document.getElementById('car-number').value,
+      car_brand: document.getElementById('car-brand').value,
+      car_model: document.getElementById('car-model').value,
+      vin: document.getElementById('vin').value || null,
+      complaint: document.getElementById('complaint').value,
+      master_id: currentUser.id
+    };
+  }
+
+  async function saveWorksParts(claimId) {
+    await supabase.from('works').delete().eq('claim_id', claimId);
+    await supabase.from('parts').delete().eq('claim_id', claimId);
+    const worksData = [];
+    Array.from(document.querySelectorAll('#works-body tr')).forEach(row => {
+      const inputs = row.querySelectorAll('input');
+      worksData.push({
+        claim_id: claimId,
+        name: inputs[0].value,
+        side: inputs[1].value || null,
+        qty: parseInt(inputs[2].value) || 1,
+        hours: parseFloat(inputs[3].value) || 0,
+        price: parseFloat(inputs[4].value) || 0,
+        sum: (parseInt(inputs[2].value) || 1) * (parseFloat(inputs[4].value) || 0)
+      });
+    });
+    const partsData = [];
+    Array.from(document.querySelectorAll('#parts-body tr')).forEach(row => {
+      const inputs = row.querySelectorAll('input');
+      partsData.push({
+        claim_id: claimId,
+        article: inputs[0].value || null,
+        name: inputs[1].value,
+        side: inputs[2].value || null,
+        qty: parseInt(inputs[3].value) || 1,
+        price: parseFloat(inputs[4].value) || 0,
+        sum: (parseInt(inputs[3].value) || 1) * (parseFloat(inputs[4].value) || 0)
+      });
+    });
+    if (worksData.length) await supabase.from('works').insert(worksData);
+    if (partsData.length) await supabase.from('parts').insert(partsData);
+  }
+
+  function validateForm() {
+    const required = ['client-fio', 'phone', 'car-brand', 'car-model', 'car-number', 'complaint'];
+    for (const id of required) {
+      if (!document.getElementById(id).value.trim()) {
+        alert('Заполните обязательные поля');
+        return false;
+      }
+    }
+    return true;
+  }
+
+  function resetForm() {
+    document.getElementById('claim-id').value = '';
+    const now = new Date();
+    document.getElementById('claim-number').value = `SR-${now.getFullYear()}${String(now.getMonth()+1).padStart(2,'0')}${String(now.getDate()).padStart(2,'0')}-${String(Math.floor(Math.random()*1000)).padStart(3,'0')}`;
+    document.getElementById('car-number').value = '';
+    document.getElementById('client-fio').value = '';
+    document.getElementById('client-company').value = '';
+    document.getElementById('phone').value = '';
+    document.getElementById('car-brand').value = '';
+    document.getElementById('car-model').value = '';
+    document.getElementById('vin').value = '';
+    document.getElementById('complaint').value = '';
+    document.getElementById('works-body').innerHTML = '';
+    document.getElementById('parts-body').innerHTML = '';
+    workIndex = 1; partIndex = 1;
+    document.getElementById('total-sum').textContent = '0.00';
+    document.getElementById('template-suggestion').style.display = 'none';
+  }
+
+  // ========== ЭКСПОРТ ==========
+  function generateCSV(claimId) {
+    let csv = 'Номер_заявки,Дата,Компания,ФИО,Телефон,Роль,Марка,Модель,Госномер,VIN,Тип_строки,Артикул,Наименование,Сторона,Количество,Нормочасы,Цена,Сумма\n';
+    const claimNumber = document.getElementById('claim-number').value;
+    const date = new Date().toISOString().split('T')[0];
+    const company = document.getElementById('client-company').value || '';
+    const fio = document.getElementById('client-fio').value;
+    const phone = document.getElementById('phone').value;
+    const role = company ? 'Компания' : 'Физлицо';
+    const brand = document.getElementById('car-brand').value;
+    const model = document.getElementById('car-model').value;
+    const number = document.getElementById('car-number').value;
+    const vin = document.getElementById('vin').value || '';
+
+    Array.from(document.querySelectorAll('#works-body tr')).forEach(row => {
+      const inputs = row.querySelectorAll('input');
+      const cols = [claimNumber, date, company, fio, phone, role, brand, model, number, vin, 'Работа', '', '', inputs[0].value, inputs[1].value, inputs[2].value, inputs[3].value, inputs[4].value, row.querySelector('.sum-cell').textContent];
+      csv += cols.map(c => `"${String(c).replace(/"/g,'""')}"`).join(',') + '\n';
+    });
+
+    Array.from(document.querySelectorAll('#parts-body tr')).forEach(row => {
+      const inputs = row.querySelectorAll('input');
+      const cols = [claimNumber, date, company, fio, phone, role, brand, model, number, vin, 'Запчасть', inputs[0].value, inputs[1].value, inputs[2].value, inputs[3].value, '', inputs[4].value, row.querySelector('.sum-cell').textContent];
+      csv += cols.map(c => `"${String(c).replace(/"/g,'""')}"`).join(',') + '\n';
+    });
+
+    const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = `заявка-${claimNumber}.csv`;
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    URL.revokeObjectURL(url);
+  }
+
+  function printClaim() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    doc.setFontSize(16);
+    doc.text('Заявка на ремонт — ООО «СЕРВИСТРАНСАВТО»', 14, 20);
+    doc.setFontSize(12);
+    doc.text(`№ ${document.getElementById('claim-number').value}`, 14, 30);
+    doc.text(`Клиент: ${document.getElementById('client-fio').value}`, 14, 40);
+    doc.text(`Авто: ${document.getElementById('car-brand').value} ${document.getElementById('car-model').value} (${document.getElementById('car-number').value})`, 14, 50);
+    doc.text(`Жалоба: ${document.getElementById('complaint').value}`, 14, 60);
+    doc.save(`заявка-${document.getElementById('claim-number').value}.pdf`);
+  }
+</script>
+
+</body>
+</html>
