--- a/index.html
+++ b/index.html
@@ -311,20 +311,45 @@
     });
   });
 
-  // ========== АВТОРИЗАЦИЯ ==========
+  // ========== АВТОРИЗАЦИЯ С АВТО-РЕГИСТРАЦИЕЙ ==========
   async function login() {
     const email = document.getElementById('login-email').value;
     const password = document.getElementById('login-password').value;
-    const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+
+    if (!email || !password) {
+      alert('Введите email и пароль');
+      return;
+    }
+
+    // Сначала пробуем войти
+    let { data, error } = await supabase.auth.signInWithPassword({ email, password });
+
     if (error) {
-      alert('❌ Ошибка: ' + error.message);
+      // Если пользователя нет — регистрируем
+      console.log('Регистрация нового пользователя:', email);
+      const {  signUpData, error: signUpError } = await supabase.auth.signUp({
+        email,
+        password,
+      });
+
+      if (signUpError) {
+        alert('❌ Ошибка: ' + signUpError.message);
+        return;
+      }
+
+      if (signUpData.user) {
+        currentUser = signUpData.user;
+        alert('✅ Пользователь создан. Вход выполнен.');
+      }
     } else {
       currentUser = data.user;
-      document.getElementById('auth-dialog').style.display = 'none';
-      document.getElementById('user-status').textContent = `👤 ${currentUser.email}`;
-      document.getElementById('logout-btn').style.display = 'inline-block';
-      renderArchive();
     }
+
+    // Обновляем UI
+    document.getElementById('auth-dialog').style.display = 'none';
+    document.getElementById('user-status').textContent = `👤 ${currentUser.email}`;
+    document.getElementById('logout-btn').style.display = 'inline-block';
+    renderArchive();
   }
 
   async function logout() {
