--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 <script>
   // ========== SUPABASE CONFIGURATION ==========
   const SUPABASE_URL = 'https://xvvhranmftqqddbplypu.supabase.co';
-  const SUPABASE_ANON_KEY = 'const SUPABASE_ANON_KEY = 'sb_publishable_KlIEz6IWNU5Uf+AbQdNbpw_YBK70P8i';
-';
+  const SUPABASE_ANON_KEY = 'sb_publishable_KlIEz6IWNU5Uf+AbQdNbpw_YBK70P8i';
   
   const { createClient } = supabase;
   const supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
