--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <script>
   // ========== SUPABASE CONFIGURATION ==========
   const SUPABASE_URL = 'https://xvvhranmftqqddbplypu.supabase.co';
-      const SUPABASE_ANON_KEY = 'sb_publishable_K1IEz6IWNU5Uf-AbQdHbpw_YBk70P81';
+    const SUPABASE_ANON_KEY = '      eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3Nzk2OTgsImV4cCI6MjA4MTM1NTY5OH0.nAkRjSi5lHIvGwWCfi7GI48A_XRMEtSMKuJS6V3zgi4';
   
   const { createClient } = supabase;
   const supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
