--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Система управления СТО — ООО «СЕРВИСТРАНСАВТО»</title>
-  <!-- Убраны пробелы в версии -->
+  <!-- Supabase v2 — ESM -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     /* ... твой CSS без изменений ... */
@@ -332,7 +332,7 @@
       }
     }
 
-    /* ✅ ДОБАВЛЕНО: анимация spin */
+    /* ✅ Анимация spin */
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
@@ -355,8 +355,8 @@
         <div class="form-group">
           <input type="password" id="loginPassword" placeholder="Пароль">
         </div>
-        <!-- ✅ Исправлено: передаём event -->
-        <button class="btn btn-primary" onclick="login(event)">Войти</button>
+        <!-- ✅ Убрали onclick -->
+        <button id="loginBtn" class="btn btn-primary">Войти</button>
       </div>
     </div>
 
@@ -365,10 +365,10 @@
       <h2>Поиск по госномеру</h2>
       <div class="search-box">
         <input type="text" id="searchInput" placeholder="Введите госномер (например: А123АА77)">
-        <button class="btn btn-primary" onclick="searchByCar()">Поиск</button>
+        <button id="searchBtn" class="btn btn-primary">Поиск</button>
       </div>
       <div id="searchResults"></div>
-      <button class="btn btn-secondary" onclick="showMainScreen()">К списку заявок</button>
+      <button id="backToMainBtn" class="btn btn-secondary">К списку заявок</button>
     </div>
 
     <!-- Main Screen -->
@@ -376,9 +376,9 @@
       <div class="toolbar">
         <div class="toolbar-title">Заявки на ремонт</div>
         <div>
-          <button class="btn btn-success" onclick="showClaimForm()">+ Создать заявку</button>
-          <button class="btn btn-secondary" onclick="showSearchScreen()">Поиск по госномеру</button>
-          <button class="btn btn-danger" onclick="logout()">Выход</button>
+          <button id="createClaimBtn" class="btn btn-success">+ Создать заявку</button>
+          <button id="searchByCarBtn" class="btn btn-secondary">Поиск по госномеру</button>
+          <button id="logoutBtn" class="btn btn-danger">Выход</button>
         </div>
       </div>
       <div class="content">
@@ -407,10 +407,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <h2 id="modalTitle">Новая заявка</h2>
-        <span class="close" onclick="closeModal()">&times;</span>
+        <span class="close" id="closeModalBtn">&times;</span>
       </div>
       <div class="modal-body">
-        <form id="claimForm" onsubmit="saveClaim(event)">
+        <form id="claimForm">
           <input type="hidden" id="claimId">
           <div class="form-row">
             <div class="form-group">
@@ -461,9 +461,9 @@
           </div>
           <div style="margin-top:20px">
             <button type="submit" class="btn btn-success">Сохранить</button>
-            <button type="button" class="btn btn-secondary" onclick="closeModal()">Отмена</button>
-            <button type="button" class="btn btn-warning" onclick="exportToCSV()" style="display:none" id="exportBtn">Экспорт CSV</button>
-            <button type="button" class="btn btn-primary" onclick="printClaim()" style="display:none" id="printBtn">Печать</button>
+            <button type="button" class="btn btn-secondary" id="cancelModalBtn">Отмена</button>
+            <button type="button" class="btn btn-warning" id="exportBtn" style="display:none">Экспорт CSV</button>
+            <button type="button" class="btn btn-primary" id="printBtn" style="display:none">Печать</button>
           </div>
         </form>
       </div>
@@ -471,16 +471,16 @@
   </div>
 
   <script>
-    // Supabase configuration — ✅ убраны пробелы
+    // Supabase configuration — ✅ URL без пробелов
     const SUPABASE_URL = 'https://xvvhranmftqqddbplypu.supabase.co';
     const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzMwNDkwNzIsImV4cCI6MjA0ODYyNTA3Mn0.gU3mIBV1iCR4NcdJ9WHhIILjAGFcD2Z-D4A4yBBKDwM';
     const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    // ✅ Исправлено: принимаем event
-    async function login(event) {
+    // Все функции — в глобальной области, но не используются в HTML
+    async function login() {
       const email = document.getElementById('loginEmail').value;
       const password = document.getElementById('loginPassword').value;
-      const btn = event.target;
+      const btn = document.getElementById('loginBtn');
 
       if (!email || !password) {
         alert('Пожалуйста, введите email и пароль');
@@ -516,7 +516,6 @@
       checkUser();
     }
 
-    // ✅ Исправлено: безопасная деструктуризация
     async function checkUser() {
       const { data, error } = await supabaseClient.auth.getUser();
 
@@ -525,12 +524,10 @@
       const userInfo = document.getElementById('userInfo');
 
       if (error || !data?.user) {
-        // Не авторизован
         loginScreen.classList.remove('hide');
         mainScreen.classList.add('hide');
         userInfo.textContent = '';
       } else {
-        // Авторизован
         loginScreen.classList.add('hide');
         mainScreen.classList.remove('hide');
         userInfo.textContent = data.user.email;
@@ -548,31 +545,54 @@
       document.getElementById('mainScreen').classList.remove('hide');
     }
 
-    // ✅ Исправлено: заглушка вместо пустой таблицы
     async function loadClaims() {
       document.getElementById('claimsBody').innerHTML = '<tr><td colspan="7" style="text-align:center;color:#7f8c8d;padding:20px;">Нет заявок</td></tr>';
     }
 
-    // 🔜 Заглушки для недостающих функций (чтобы не было ошибок)
+    // Заглушки
     function searchByCar() { alert('Поиск пока не реализован'); }
     function showClaimForm() { alert('Создание заявки — в разработке'); }
     function saveClaim(event) { event.preventDefault(); alert('Сохранение — в разработке'); }
     function exportToCSV() { alert('Экспорт CSV — в разработке'); }
     function printClaim() { alert('Печать — в разработке'); }
 
-    // ✅ Улучшено: закрытие по клику на фон
     function closeModal() {
-      const modal = document.getElementById('claimModal');
-      modal.classList.remove('show');
+      document.getElementById('claimModal').classList.remove('show');
     }
 
-    // Добавляем обработчик клика по фону
-    document.getElementById('claimModal').addEventListener('click', (e) => {
-      if (e.target.id === 'claimModal') closeModal();
-    });
+    // 👇 Добавляем события через addEventListener — РЕКОМЕНДОВАННЫЙ ПОДХОД
+    document.addEventListener('DOMContentLoaded', () => {
+      // Кнопка входа
+      document.getElementById('loginBtn').addEventListener('click', login);
 
-    // Инициализация
-    document.addEventListener('DOMContentLoaded', checkUser);
+      // Кнопка выхода
+      document.getElementById('logoutBtn').addEventListener('click', logout);
+
+      // Поиск по госномеру
+      document.getElementById('searchBtn').addEventListener('click', searchByCar);
+      document.getElementById('searchByCarBtn').addEventListener('click', showSearchScreen);
+
+      // Назад к заявкам
+      document.getElementById('backToMainBtn').addEventListener('click', showMainScreen);
+
+      // Создать заявку
+      document.getElementById('createClaimBtn').addEventListener('click', showClaimForm);
+
+      // Модальное окно
+      document.getElementById('closeModalBtn').addEventListener('click', closeModal);
+      document.getElementById('cancelModalBtn').addEventListener('click', closeModal);
+
+      // Закрытие по клику на фон
+      document.getElementById('claimModal').addEventListener('click', (e) => {
+        if (e.target.id === 'claimModal') closeModal();
+      });
+
+      // Форма заявки
+      document.getElementById('claimForm').addEventListener('submit', saveClaim);
+
+      // Инициализация
+      checkUser();
+    });
   </script>
 </body>
 </html>
